Fixes sidemenu's height and name panel's padding and margin
There are some layout issues in desinger page . So, I have fixed some of them.
1) Padding of name-panel
2) Margin of name-panel
3) Sidemenu height

--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -22,10 +22,6 @@ body {
   background: $main-background;
 }
 
-#page_content {
-  margin: 0 0.5em;
-}
-
 .desktop50 {
   width: 50%;
 }
