--- a/themes/pmahomme/scss/_designer.scss
+++ b/themes/pmahomme/scss/_designer.scss
@@ -485,6 +485,7 @@ a {
     display: block;
     float: none;
     overflow: hidden;
+    line-height: 1em;
   }
 
   img,
@@ -499,7 +500,7 @@ a {
   background: #efefef;
   width: 100%;
   font-size: 1.2em;
-  padding: 10px;
+  padding: 5px;
   font-weight: bold;
 }
 
